# cs-example

./: README.md  code_of_conduct.md  license.md  meson.build  readme.md
src/: meson.build
src/main/: main.cs  meson.build
